--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <ul>
         <li><a href="part1/">Part 1</a>: Project setup, basic reagent page</li>
+        <li><a href="part2/">Part 2</a>: Kee-Frame with db spec, routing and deployment time config</li>
     </ul>
 </body>
 </html>
