--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <ul>
         <li><a href="part1/">Part 1</a>: Project setup, basic reagent page</li>
         <li><a href="part2/">Part 2</a>: Kee-Frame with db spec, routing and deployment time config</li>
+        <li><a href="part3/">Part 3</a>: Hardcoded training programs with wizard</li>
     </ul>
 </body>
 </html>
