--- a/part4/index.html
+++ b/part4/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <title>Learn You A Kee-Frame</title>
     <meta description="Example PWA using re-frame/kee-frame" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bulma.min.css">
     <script src="js/main.js" defer></script>
     
-    <link rel="manifest" href="lyakf.webmanifest">
+    <!-- google uses manifest.json, will this fix offline mode? -->
+    <link rel="manifest" href="/learn-you-a-keeframe/part4/manifest.json">
     <script src="js/register_sw.js" defer></script>
     
 </head>
