mention part4 in index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="part1/">Part 1</a>: Project setup, basic reagent page</li>
         <li><a href="part2/">Part 2</a>: Kee-Frame with db spec, routing and deployment time config</li>
         <li><a href="part3/">Part 3</a>: Hardcoded training programs with wizard</li>
+        <li><a href="part4/">Part 4</a>: PWA: installable and works offline</li>
     </ul>
 </body>
 </html>
