save history, snapshots, reset exercises

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="part2/">Part 2</a>: Kee-Frame with db spec, routing and deployment time config</li>
         <li><a href="part3/">Part 3</a>: Hardcoded training programs with wizard</li>
         <li><a href="part4/">Part 4</a>: PWA: installable and works offline</li>
+        <li><a href="part5/">Part 5</a>: Codename DOGFOOD. Local storage, exercise reset, history</li>
     </ul>
 </body>
 </html>
